# biblib

./: .gitignore  CHANGELOG.md  Cargo.toml  PARSING_GUIDE.md  README.md
docs/: deduplication-guide.md  parsing-guide.md
scripts/: README.md
src/: diagnostics.rs  error.rs  ictrp.rs  lib.rs  pubmed.rs  regex.rs  utils.rs
src/bib/: mod.rs  parse.rs
src/csv/: config.rs  ictrp.rs  mod.rs  parse.rs  structure.rs
src/endnote_xml/: mod.rs  parse.rs
src/enw/: mod.rs  parse.rs
src/ictrp/: csv.rs  mod.rs  xml.rs
src/ictrp_xml/: mod.rs
src/pubmed/: author.rs  mod.rs  parse.rs  structure.rs
src/ris/: mod.rs  parse.rs  structure.rs  tags.rs
tests/fixtures/ictrp/: expected-output.json  who-export-sample.xml
