[package]
name = "biblib"
version = "0.5.0"
edition = "2024"
description = "Parse, manage, and deduplicate academic citations"
authors = ["Ali Azlan <aliazlanofficial@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/revidiumhq/biblib"
documentation = "https://docs.rs/biblib"
readme = "README.md"
keywords = ["citations", "deduplication", "nbib", "doi", "bibliography"]
categories = ["science", "text-processing"]

[features]
default = ["csv", "pubmed", "xml", "ris", "dedupe"]
csv = ["dep:csv"]
pubmed = []
xml = ["dep:quick-xml"]
ris = []
dedupe = ["dep:rayon", "dep:strsim"]
diagnostics = ["dep:ariadne"]

[dependencies]
thiserror = "2.0.18"
ariadne = { version = "0.6.0", optional = true }
quick-xml = { version = "0.39.2", optional = true }
csv = { version = "1.4.0", optional = true }
strsim = { version = "0.11.1", optional = true }
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
regex-lite = "0.1.9"
either = "1.15.0"
itertools = "0.14.0"
compact_str = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = { version = "0.25.0", default-features = false }
